--- a/whac-a-mole_game/index.html
+++ b/whac-a-mole_game/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whac-A-Mole | A Fun casual game | Beat The High Score</title>
-  <link rel="stylesheet" href="mole.css">
-  <link href="https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Whac a Mole</title>
+    <link rel="stylesheet" href="mole.css">
+    <script src="mole.js"></script>
 </head>
 <body>
-  <h1>Whac-A-Mole</h1>
-  <h2 id="score">0</h2>
-  <!-- 3x3 Board -->
-  <div id="board"></div>
-  <script src="mole.js"></script>
+    <h1>Whac a Mole</h1>
+    <h2 id="score">0</h2>
+    <!-- 3x3 -->
+    <div id="board">
+    </div>
 </body>
 </html>
